<resources>
    <string name="app_name">Happy</string>
    <string name="chat">Chat</string>
    <string name="following">Following</string>
    <string name="up_vote">Up Votes</string>
    <string name="down_vote">Down Votes</string>
    <string name="followers">Followers</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="gifts">Gifts</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="new_post">New post</string>
    <string name="post_content">Subscribe today to receive amazing Figma resources for free on your inboxSubscribe This UI sticker sheet. Subscribe today to receive amazing Figma resources for free on your inboxSubscribe This UI sticker sheet.Subscribe today to receive amazing Figma resources for free on your inboxSubscribe This UI sticker sheet. Subscribe today to receive amazing Figma resources for free on your inboxSubscribe This UI sticker sheet. Subscribe today to receive amazing Figma resources for free on your inboxSubscribe This UI sticker sheet. Subscribe today to receive amazing Figma resources for free on your inboxSubscribe This UI sticker sheet.Subscribe today to receive amazing Figma resources for free on your inboxSubscribe This UI sticker sheet. Subscribe today to receive amazing Figma resources for free on your inboxSubscribe This UI sticker sheet. amazing Figma resources for free on your inboxSubscribe This UI sticker sheet.Subscribe today to receive amazing Figma resources for free on your inboxSubscribe This UI sticker sheet. Subscribe today to receive amazing Figma resources for free on your inboxSubscribe This UI sticker sheet.</string>
    <string name="back">Back</string>
    <string name="post">Post</string>
    <string name="publish">Publish</string>
    <string name="post_input_hint">Share what make people happy :)</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
</resources>