<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.thechance.happysocialmedia.ui.identity.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="136dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_text_user_name"
            style="@style/Theme.HappySocialMedia.Text.Input.Auth"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/spacingMedium"
            android:layout_marginTop="320dp"
            android:hint="@string/username"
            android:paddingStart="@dimen/spacingMedium"
            android:text="@={viewModel.userName}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/edit_text_password"
            style="@style/Theme.HappySocialMedia.Text.Input.Auth"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/spacingMedium"
            android:layout_marginTop="@dimen/spacingMedium"
            android:hint="@string/password"
            android:paddingStart="@dimen/spacingMedium"
            android:paddingRight="@dimen/spacingMedium"
            android:text="@={viewModel.password}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_user_name" />

        <ImageView
            android:id="@+id/show_password_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_baseline_visibility_24"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text_password"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_password"
            app:layout_constraintTop_toTopOf="@+id/edit_text_password"
            app:tint="@color/shade_ternary_color"
            tools:ignore="ContentDescription" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_log_in"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/spacingMedium"
            android:layout_marginTop="@dimen/spacingMedium"
            android:text="Log in "
            android:onClick="@{()->viewModel.logInWithUser()}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_password" />

        <TextView
            android:id="@+id/text_sing_up_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="@dimen/spacingLarge"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintLeft_toLeftOf="@id/button_log_in"
            app:layout_constraintTop_toBottomOf="@id/button_log_in" />

        <TextView
            android:id="@+id/text_sing_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacingSmall"
            android:layout_marginTop="@dimen/spacingLarge"
            android:text="@string/sign_up"
            android:textColor="@color/brand_color"
            app:layout_constraintLeft_toRightOf="@id/text_sing_up_account"
            app:layout_constraintTop_toBottomOf="@id/button_log_in" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>